--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 <section>
 <h2>Featured Products</h2>
 <div class="product">
-<img src="assets/shirt.jpeg" alt="Shirt">
+<img src="shirt.jpeg" alt="Shirt">
 <h3>Men's Shirt</h3>
 <p>$25.99</p>
 <button>Add to Cart</button>
 </div>
 <div class="product">
-<img src="assets/pant.jpeg" alt="Pant">
+<img src="pant.jpeg" alt="Pant">
 <h3>Women's Pant</h3>
 
 <p>$29.99</p>
